# dotme

./: .release.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
docs/: symlinks.md
src/: cli.rs  config.rs  dotfiles.rs  git.rs  main.rs  symlinks.rs
