[package]
name = "dotme"
description = "A dotfiles manager written in Rust."
version = "0.1.0"
license = "MIT"
readme = "README.md"

edition = "2024"
rust-version = "1.85"

keywords = []
categories = []

documentation = "https://docs.rs/dotme"
repository = "https://github.com/42ByteLabs/dotme"

authors = ["42ByteLabs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI parser
clap = { version = "4.5", features = ["derive", "env"] }
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"
# Config
figment = { version = "0.10", features = ["env", "toml", "yaml", "json", "serde_yaml"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
# Error handling
thiserror = "2"
anyhow = "1"
# logging
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.49.0", features = ["fs", "macros", "rt-multi-thread", "process"] }
# System
dirs = "5"
# Time
chrono = { version = "0.4", features = ["serde"] }
